# cgal

./: .gitignore  CMakeLists.txt  cgal_grid_simplifier.cpp  cgal_viewer.cpp  cgal_wlop_simplifier.cpp
data/: centaur.off
output/: centaur-grid-3.xyz  centaur-grid-6.xyz  centaur-grid-default.xyz  centaur-wlop-0.2-0.005.xyz  centaur-wlop-20-0.005.xyz  centaur-wlop-default.xyz  cq500-ct-0-grid-3.xyz  cq500-ct-0-grid-6.xyz  cq500-ct-0-wlop-0.2-0.005.xyz  cq500-ct-0-wlop-default.xyz  dragon-grid-3.xyz  dragon-grid-default.xyz  dragon-wlop-0.2-0.005.xyz
